inclusion of TomEE Maven Plugin